tests/ui/issues/issue-78622.rs
#![crate_type = "lib"]

struct S;
fn f() {
    S::A::<f> {}
    //~^ ERROR ambiguous associated type
}
